fix: resolve duplicate 'Recent Activity' title in dashboard and improve project dropdown